parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSING_TAG
    SINGLE_TAG
    OPENING_TAG

Grammar

Rule 0     S' -> document
Rule 1     empty -> <empty>
Rule 2     document -> doctype HTML_O head body HTML_E
Rule 3     document -> empty
Rule 4     doctype -> DOCTYPE
Rule 5     doctype -> empty
Rule 6     head -> HEAD_O head_data HEAD_E
Rule 7     head -> empty
Rule 8     head_data -> head_data TITLE_O STRING TITLE_E
Rule 9     head_data -> head_data META_O
Rule 10    head_data -> empty
Rule 11    body -> BODY_O body_data BODY_E
Rule 12    body -> empty
Rule 13    body_data -> body_data A_O body_data A_E data
Rule 14    body_data -> body_data FONT_O body_data FONT_E data
Rule 15    body_data -> body_data CENTER_O body_data CENTER_E data
Rule 16    body_data -> body_data BR_S data
Rule 17    body_data -> body_data BR_O data
Rule 18    body_data -> body_data BR_O BR_E data
Rule 19    body_data -> body_data P_O body_data P_E data
Rule 20    body_data -> body_data H1_O body_data H1_E data
Rule 21    body_data -> body_data H2_O body_data H2_E data
Rule 22    body_data -> body_data H3_O body_data H3_E data
Rule 23    body_data -> body_data H4_O body_data H4_E data
Rule 24    body_data -> body_data OL_O body_data OL_E data
Rule 25    body_data -> body_data UL_O body_data UL_E data
Rule 26    body_data -> body_data LI_O body_data LI_E data
Rule 27    body_data -> body_data DL_O body_data DL_E data
Rule 28    body_data -> body_data DT_O body_data DT_E data
Rule 29    body_data -> body_data DD_O body_data DD_E data
Rule 30    body_data -> body_data DIV_O body_data DIV_E data
Rule 31    body_data -> body_data U_O body_data U_E data
Rule 32    body_data -> body_data B_O body_data B_E data
Rule 33    body_data -> body_data STRONG_O body_data STRONG_E data
Rule 34    body_data -> body_data I_O body_data I_E data
Rule 35    body_data -> body_data EM_O body_data EM_E data
Rule 36    body_data -> body_data TT_O body_data TT_E data
Rule 37    body_data -> body_data SMALL_O body_data SMALL_E data
Rule 38    body_data -> body_data SUB_O body_data SUB_E data
Rule 39    body_data -> body_data SUP_O body_data SUP_E data
Rule 40    body_data -> body_data GREEK_SPECIAL_SYMBOL data
Rule 41    body_data -> body_data IMG_S data
Rule 42    body_data -> body_data IMG_O data
Rule 43    body_data -> body_data IMG_O IMG_E data
Rule 44    body_data -> body_data FIGURE_O fig_data FIGURE_E data
Rule 45    fig_data -> fig_data IMG_O
Rule 46    fig_data -> fig_data IMG_S
Rule 47    fig_data -> fig_data IMG_O IMG_E
Rule 48    fig_data -> fig_data FIGCAPTION_O body_data FIGCAPTION_E
Rule 49    fig_data -> empty
Rule 50    body_data -> body_data TABLE_O caption table_data TABLE_E data
Rule 51    body_data -> body_data TABLE_O table_data TABLE_E data
Rule 52    caption -> CAPTION_O body_data CAPTION_E
Rule 53    table_data -> first_row rows
Rule 54    table_data -> empty
Rule 55    first_row -> TR_O td_or_th TR_E
Rule 56    td_or_th -> td_or_th TD_O body_data TD_E
Rule 57    td_or_th -> td_or_th TH_O body_data TH_E
Rule 58    td_or_th -> empty
Rule 59    rows -> rows TR_O cols TR_E
Rule 60    rows -> empty
Rule 61    cols -> cols TD_O body_data TD_E
Rule 62    cols -> empty
Rule 63    body_data -> body_data COMMENT data
Rule 64    body_data -> data
Rule 65    data -> data STRING
Rule 66    data -> data ANOTHER_STRING
Rule 67    data -> empty

Terminals, with rules where they appear

ANOTHER_STRING       : 66
A_E                  : 13
A_O                  : 13
BODY_E               : 11
BODY_O               : 11
BR_E                 : 18
BR_O                 : 17 18
BR_S                 : 16
B_E                  : 32
B_O                  : 32
CAPTION_E            : 52
CAPTION_O            : 52
CENTER_E             : 15
CENTER_O             : 15
CLOSING_TAG          : 
COMMENT              : 63
DD_E                 : 29
DD_O                 : 29
DIV_E                : 30
DIV_O                : 30
DL_E                 : 27
DL_O                 : 27
DOCTYPE              : 4
DT_E                 : 28
DT_O                 : 28
EM_E                 : 35
EM_O                 : 35
FIGCAPTION_E         : 48
FIGCAPTION_O         : 48
FIGURE_E             : 44
FIGURE_O             : 44
FONT_E               : 14
FONT_O               : 14
GREEK_SPECIAL_SYMBOL : 40
H1_E                 : 20
H1_O                 : 20
H2_E                 : 21
H2_O                 : 21
H3_E                 : 22
H3_O                 : 22
H4_E                 : 23
H4_O                 : 23
HEAD_E               : 6
HEAD_O               : 6
HTML_E               : 2
HTML_O               : 2
IMG_E                : 43 47
IMG_O                : 42 43 45 47
IMG_S                : 41 46
I_E                  : 34
I_O                  : 34
LI_E                 : 26
LI_O                 : 26
META_O               : 9
OL_E                 : 24
OL_O                 : 24
OPENING_TAG          : 
P_E                  : 19
P_O                  : 19
SINGLE_TAG           : 
SMALL_E              : 37
SMALL_O              : 37
STRING               : 8 65
STRONG_E             : 33
STRONG_O             : 33
SUB_E                : 38
SUB_O                : 38
SUP_E                : 39
SUP_O                : 39
TABLE_E              : 50 51
TABLE_O              : 50 51
TD_E                 : 56 61
TD_O                 : 56 61
TH_E                 : 57
TH_O                 : 57
TITLE_E              : 8
TITLE_O              : 8
TR_E                 : 55 59
TR_O                 : 55 59
TT_E                 : 36
TT_O                 : 36
UL_E                 : 25
UL_O                 : 25
U_E                  : 31
U_O                  : 31
error                : 

Nonterminals, with rules where they appear

body                 : 2
body_data            : 11 13 13 14 14 15 15 16 17 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 42 43 44 48 50 51 52 56 57 61 63
caption              : 50
cols                 : 59 61
data                 : 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 50 51 63 64 65 66
doctype              : 2
document             : 0
empty                : 3 5 7 10 12 49 54 58 60 62 67
fig_data             : 44 45 46 47 48
first_row            : 53
head                 : 2
head_data            : 6 8 9
rows                 : 53 59
table_data           : 50 51
td_or_th             : 55 56 57

Parsing method: LALR

state 0

    (0) S' -> . document
    (2) document -> . doctype HTML_O head body HTML_E
    (3) document -> . empty
    (4) doctype -> . DOCTYPE
    (5) doctype -> . empty
    (1) empty -> .

    DOCTYPE         shift and go to state 1
    $end            reduce using rule 1 (empty -> .)
    HTML_O          reduce using rule 1 (empty -> .)

    doctype                        shift and go to state 2
    document                       shift and go to state 3
    empty                          shift and go to state 4

state 1

    (4) doctype -> DOCTYPE .

    HTML_O          reduce using rule 4 (doctype -> DOCTYPE .)


state 2

    (2) document -> doctype . HTML_O head body HTML_E

    HTML_O          shift and go to state 5


state 3

    (0) S' -> document .



state 4

    (3) document -> empty .
    (5) doctype -> empty .

    $end            reduce using rule 3 (document -> empty .)
    HTML_O          reduce using rule 5 (doctype -> empty .)


state 5

    (2) document -> doctype HTML_O . head body HTML_E
    (6) head -> . HEAD_O head_data HEAD_E
    (7) head -> . empty
    (1) empty -> .

    HEAD_O          shift and go to state 6
    BODY_O          reduce using rule 1 (empty -> .)
    HTML_E          reduce using rule 1 (empty -> .)

    empty                          shift and go to state 8
    head                           shift and go to state 7

state 6

    (6) head -> HEAD_O . head_data HEAD_E
    (8) head_data -> . head_data TITLE_O STRING TITLE_E
    (9) head_data -> . head_data META_O
    (10) head_data -> . empty
    (1) empty -> .

    HEAD_E          reduce using rule 1 (empty -> .)
    TITLE_O         reduce using rule 1 (empty -> .)
    META_O          reduce using rule 1 (empty -> .)

    empty                          shift and go to state 10
    head_data                      shift and go to state 9

state 7

    (2) document -> doctype HTML_O head . body HTML_E
    (11) body -> . BODY_O body_data BODY_E
    (12) body -> . empty
    (1) empty -> .

    BODY_O          shift and go to state 12
    HTML_E          reduce using rule 1 (empty -> .)

    body                           shift and go to state 13
    empty                          shift and go to state 11

state 8

    (7) head -> empty .

    BODY_O          reduce using rule 7 (head -> empty .)
    HTML_E          reduce using rule 7 (head -> empty .)


state 9

    (6) head -> HEAD_O head_data . HEAD_E
    (8) head_data -> head_data . TITLE_O STRING TITLE_E
    (9) head_data -> head_data . META_O

    HEAD_E          shift and go to state 14
    TITLE_O         shift and go to state 15
    META_O          shift and go to state 16


state 10

    (10) head_data -> empty .

    HEAD_E          reduce using rule 10 (head_data -> empty .)
    TITLE_O         reduce using rule 10 (head_data -> empty .)
    META_O          reduce using rule 10 (head_data -> empty .)


state 11

    (12) body -> empty .

    HTML_E          reduce using rule 12 (body -> empty .)


state 12

    (11) body -> BODY_O . body_data BODY_E
    (13) body_data -> . body_data A_O body_data A_E data
    (14) body_data -> . body_data FONT_O body_data FONT_E data
    (15) body_data -> . body_data CENTER_O body_data CENTER_E data
    (16) body_data -> . body_data BR_S data
    (17) body_data -> . body_data BR_O data
    (18) body_data -> . body_data BR_O BR_E data
    (19) body_data -> . body_data P_O body_data P_E data
    (20) body_data -> . body_data H1_O body_data H1_E data
    (21) body_data -> . body_data H2_O body_data H2_E data
    (22) body_data -> . body_data H3_O body_data H3_E data
    (23) body_data -> . body_data H4_O body_data H4_E data
    (24) body_data -> . body_data OL_O body_data OL_E data
    (25) body_data -> . body_data UL_O body_data UL_E data
    (26) body_data -> . body_data LI_O body_data LI_E data
    (27) body_data -> . body_data DL_O body_data DL_E data
    (28) body_data -> . body_data DT_O body_data DT_E data
    (29) body_data -> . body_data DD_O body_data DD_E data
    (30) body_data -> . body_data DIV_O body_data DIV_E data
    (31) body_data -> . body_data U_O body_data U_E data
    (32) body_data -> . body_data B_O body_data B_E data
    (33) body_data -> . body_data STRONG_O body_data STRONG_E data
    (34) body_data -> . body_data I_O body_data I_E data
    (35) body_data -> . body_data EM_O body_data EM_E data
    (36) body_data -> . body_data TT_O body_data TT_E data
    (37) body_data -> . body_data SMALL_O body_data SMALL_E data
    (38) body_data -> . body_data SUB_O body_data SUB_E data
    (39) body_data -> . body_data SUP_O body_data SUP_E data
    (40) body_data -> . body_data GREEK_SPECIAL_SYMBOL data
    (41) body_data -> . body_data IMG_S data
    (42) body_data -> . body_data IMG_O data
    (43) body_data -> . body_data IMG_O IMG_E data
    (44) body_data -> . body_data FIGURE_O fig_data FIGURE_E data
    (50) body_data -> . body_data TABLE_O caption table_data TABLE_E data
    (51) body_data -> . body_data TABLE_O table_data TABLE_E data
    (63) body_data -> . body_data COMMENT data
    (64) body_data -> . data
    (65) data -> . data STRING
    (66) data -> . data ANOTHER_STRING
    (67) data -> . empty
    (1) empty -> .

    STRING          reduce using rule 1 (empty -> .)
    ANOTHER_STRING  reduce using rule 1 (empty -> .)
    BODY_E          reduce using rule 1 (empty -> .)
    A_O             reduce using rule 1 (empty -> .)
    FONT_O          reduce using rule 1 (empty -> .)
    CENTER_O        reduce using rule 1 (empty -> .)
    BR_S            reduce using rule 1 (empty -> .)
    BR_O            reduce using rule 1 (empty -> .)
    P_O             reduce using rule 1 (empty -> .)
    H1_O            reduce using rule 1 (empty -> .)
    H2_O            reduce using rule 1 (empty -> .)
    H3_O            reduce using rule 1 (empty -> .)
    H4_O            reduce using rule 1 (empty -> .)
    OL_O            reduce using rule 1 (empty -> .)
    UL_O            reduce using rule 1 (empty -> .)
    LI_O            reduce using rule 1 (empty -> .)
    DL_O            reduce using rule 1 (empty -> .)
    DT_O            reduce using rule 1 (empty -> .)
    DD_O            reduce using rule 1 (empty -> .)
    DIV_O           reduce using rule 1 (empty -> .)
    U_O             reduce using rule 1 (empty -> .)
    B_O             reduce using rule 1 (empty -> .)
    STRONG_O        reduce using rule 1 (empty -> .)
    I_O             reduce using rule 1 (empty -> .)
    EM_O            reduce using rule 1 (empty -> .)
    TT_O            reduce using rule 1 (empty -> .)
    SMALL_O         reduce using rule 1 (empty -> .)
    SUB_O           reduce using rule 1 (empty -> .)
    SUP_O           reduce using rule 1 (empty -> .)
    GREEK_SPECIAL_SYMBOL reduce using rule 1 (empty -> .)
    IMG_S           reduce using rule 1 (empty -> .)
    IMG_O           reduce using rule 1 (empty -> .)
    FIGURE_O        reduce using rule 1 (empty -> .)
    TABLE_O         reduce using rule 1 (empty -> .)
    COMMENT         reduce using rule 1 (empty -> .)

    data                           shift and go to state 17
    body_data                      shift and go to state 18
    empty                          shift and go to state 19

state 13

    (2) document -> doctype HTML_O head body . HTML_E

    HTML_E          shift and go to state 20


state 14

    (6) head -> HEAD_O head_data HEAD_E .

    BODY_O          reduce using rule 6 (head -> HEAD_O head_data HEAD_E .)
    HTML_E          reduce using rule 6 (head -> HEAD_O head_data HEAD_E .)


state 15

    (8) head_data -> head_data TITLE_O . STRING TITLE_E

    STRING          shift and go to state 21


state 16

    (9) head_data -> head_data META_O .

    HEAD_E          reduce using rule 9 (head_data -> head_data META_O .)
    TITLE_O         reduce using rule 9 (head_data -> head_data META_O .)
    META_O          reduce using rule 9 (head_data -> head_data META_O .)


state 17

    (64) body_data -> data .
    (65) data -> data . STRING
    (66) data -> data . ANOTHER_STRING
